--- a/.github/workflows/Test-with-Seeker.yml
+++ b/.github/workflows/Test-with-Seeker.yml
@@ -8,8 +8,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Setup Java
         uses: actions/setup-java@v4
+        java-version: 21
+        distribution: temurin
+        
       # Run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
