--- a/.github/workflows/Test-with-Seeker.yml
+++ b/.github/workflows/Test-with-Seeker.yml
@@ -6,13 +6,11 @@ jobs:
   run-tests:
     runs-on: ubuntu-24.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        java-version: 21
-        distribution: temurin
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: temurin
         
       # Run all Cypress tests
       - name: Cypress run
