--- a/.github/workflows/Test-with-Seeker.yml
+++ b/.github/workflows/Test-with-Seeker.yml
@@ -20,4 +20,4 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           working-directory: ./test
-          start: java -jar target/api.jar
+          start: java -jar api.jar
