--- a/.github/workflows/Test-with-Seeker.yml
+++ b/.github/workflows/Test-with-Seeker.yml
@@ -25,5 +25,6 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           working-directory: ./test
-          start: java -jar api.jar
-          #start: java -javaagent:./seeker-agent.jar -jar api.jar
+          #start: java -jar api.jar
+          start: java -javaagent:./seeker-agent.jar -jar api.jar
+          wait-on: 'http://localhost:3001'
