--- a/.github/workflows/Test-with-Seeker.yml
+++ b/.github/workflows/Test-with-Seeker.yml
@@ -15,11 +15,19 @@ jobs:
       - name: Copy build artifacts
         run: cp target/api.jar test/api.jar
 
-      - name: Setup Seeker Agent
-        run: |
-          sh -c "$( curl -k -X GET -fsSL --header 'Accept: application/x-sh' 'https://seeker.field-test.blackduck.com/rest/api/latest/installers/agents/scripts/JAVA?osFamily=LINUX&downloadWith=curl&projectKey=hippotech_github&webServer=OTHER&flavor=DEFAULT&agentName=&accessToken=')"
-          cp seeker/seeker-agent.jar test/seeker-agent.jar
-        
+      #- name: Setup Seeker Agent
+      #  run: |
+      #    sh -c "$( curl -k -X GET -fsSL --header 'Accept: application/x-sh' 'https://seeker.field-test.blackduck.com/rest/api/latest/installers/agents/scripts/JAVA?osFamily=LINUX&downloadWith=curl&projectKey=hippotech_github&webServer=OTHER&flavor=DEFAULT&agentName=&accessToken=')"
+      #    cp seeker/seeker-agent.jar test/seeker-agent.jar
+
+      
+      - uses: Sean18/SeekerAction@main
+        with:
+          base-url: https://seeker.field-test.blackduck.com
+          project-key: 'hippotech_github'
+          output-path: test/seeker-agent.jar
+
+          
       # Run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
